--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
   <div class="side-image">
-    <div class="header"><img src="./assets/code-svgrepo-com.svg" alt="">Odin</div>
+    <div class="header">
+      <img src="./assets/code-svgrepo-com.svg" alt="" class="img">
+      <span>CODY</span>
+    </div>
+    <a class="citation" href="https://www.pexels.com/photo/a-man-in-black-hoodie-sweater-using-his-mobile-phone-6963096/">Photo by Mikhail Nilov</a>
   </div>
   <div class="form">
     <div class="info">
