restyled side-image

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="side-image">
     <div class="header">
       <img src="./assets/code-svgrepo-com.svg" alt="" class="img">
-      <span>CODY</span>
+      <span>CANADA</span>
     </div>
-    <a class="citation" href="https://www.pexels.com/photo/a-man-in-black-hoodie-sweater-using-his-mobile-phone-6963096/">Photo by Mikhail Nilov</a>
+    <a class="citation" href="https://www.pexels.com/photo/beige-sun-hat-2917182/">Photo by Andre Furtado</a>
   </div>
   <div class="form">
     <div class="info">
