restyled form side

--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
 <body>
   <div class="side-image">
     <div class="header">
-      <img src="./assets/code-svgrepo-com.svg" alt="" class="img">
+      <img src="./assets/canadian-maple-leaf-brands (1).svg" alt="" class="img">
       <span>CANADA</span>
     </div>
     <a class="citation" href="https://www.pexels.com/photo/beige-sun-hat-2917182/">Photo by Andre Furtado</a>
   </div>
   <div class="form">
     <div class="info">
-      <p>This is not a real online service! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, commodi!<br>
-      Sign up now to get started.</p>
-      <p>You know you want to.</p>
+      <div class="paragraphs">
+        <p>This is not a real online service! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, commodi!<br>
+        Sign up now to get started.</p>
+        <p>You know you want to.</p>
+      </div>
+      <!-- <div class="light/dark">
+        <button></button>
+      </div> -->
     </div>
     <div class="inputs">
       <div class="form-header">
@@ -28,32 +33,32 @@
       </div>
       <div class="lines line-1">
         <div class="first-name">
-          <label for="first-name">First Name:</label>
+          <!-- <label for="first-name">First Name:</label> -->
           <input type="text" id="first-name" name="first-name" required placeholder="First Name">
         </div>
         <div class="last-name">
-          <label for="last-name">Last Name:</label>
+          <!-- <label for="last-name">Last Name:</label> -->
           <input type="text" id="last-name" name="last-name" required placeholder="Last Name">
         </div>
       </div>
       <div class="lines line-2">
         <div class="email">
-          <label for="email">Email:</label>
+          <!-- <label for="email">Email:</label> -->
           <input type="email" name="email" id="email" required placeholder="Email">
         </div>
         <div class="number">
-          <label for="number">Phone Number:</label>
-          <input type='tel' name="number" id="number" pattern="[0-9]" required placeholder="Phone Number">
+          <!-- <label for="number">Phone Number:</label> -->
+          <input type='tel' name="number" id="number" pattern="[0-9]+" required placeholder="Phone Number">
         </div>
       </div>
       <div class="lines line-3">
         <div class="password">
-          <label for="password">Password:</label>
+          <!-- <label for="password">Password:</label> -->
           <input type="password" name="password" id="password" required placeholder="Password">
         </div>
         <div class="confirmation">
-          <label for="con-pass">Confirm Password:</label>
-          <input type="password" name="con-pass" id="con-pass" required>
+          <!-- <label for="con-pass">Confirm Password:</label> -->
+          <input type="password" name="con-pass" id="con-pass" required placeholder="Confirm Password">
           <span></span>
         </div>
       </div>
