changed side-image background

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
   <div class="side-image">
     <div class="header">
-      <img src="./assets/canadian-maple-leaf-brands (1).svg" alt="" class="img">
-      <span>CANADA</span>
+      <img src="./assets/code-svgrepo-com.svg" alt="" class="img">
+      <span>CODE</span>
     </div>
-    <a class="citation" href="https://www.pexels.com/photo/beige-sun-hat-2917182/">Photo by Andre Furtado</a>
+    <a class="citation" href="https://unsplash.com/@safarslife?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank">Photo by Safar Safarov</a>
   </div>
   <div class="form">
     <div class="info">
@@ -33,31 +33,25 @@
       </div>
       <div class="lines line-1">
         <div class="first-name">
-          <!-- <label for="first-name">First Name:</label> -->
           <input type="text" id="first-name" name="first-name" required placeholder="First Name">
         </div>
         <div class="last-name">
-          <!-- <label for="last-name">Last Name:</label> -->
           <input type="text" id="last-name" name="last-name" required placeholder="Last Name">
         </div>
       </div>
       <div class="lines line-2">
         <div class="email">
-          <!-- <label for="email">Email:</label> -->
           <input type="email" name="email" id="email" required placeholder="Email">
         </div>
         <div class="number">
-          <!-- <label for="number">Phone Number:</label> -->
           <input type='tel' name="number" id="number" pattern="[0-9]+" required placeholder="Phone Number">
         </div>
       </div>
       <div class="lines line-3">
         <div class="password">
-          <!-- <label for="password">Password:</label> -->
           <input type="password" name="password" id="password" required placeholder="Password">
         </div>
         <div class="confirmation">
-          <!-- <label for="con-pass">Confirm Password:</label> -->
           <input type="password" name="con-pass" id="con-pass" required placeholder="Confirm Password">
           <span></span>
         </div>
